# Autonomous_bot_UFES_ELIO_BRAYAN_TASK_2

./: README.md
map_launch/: CMakeLists.txt  package.xml
map_launch/launch/: launch_mapa.launch.py  launch_prueba.launch.py  launch_robot.launch.py
work_node/: package.xml  setup.cfg  setup.py
work_node/work_node/: n_detection.py  n_exploration.py  n_localization.py
