<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>work_node</name>
  <version>0.0.0</version>
  <description>work nodes - Robots Autonomos</description>
  <maintainer email="eliotrianar95@gmail.com">Elio-Brayan</maintainer>
  <license>License: Apache 2.0</license>

  <depend>rclpy</depend>
  <depend>numpy</depend>
  <depend>cv2</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
